# stake-client-rs

./: Cargo.toml  Config.toml  Dockerfile.release  Makefile  README.md
.github/workflows/: dockerimage.yml
client/: Cargo.toml
client/src/: command.rs  config.rs  crypto.rs  error.rs  keystore.rs  listener.rs  main.rs  pkcs8.rs  primitives.rs  tasks.rs  tasks_para.rs  test.rs  wallet.rs
client/src/common/: error.rs  mod.rs  primitives.rs
client/src/keystore/: keystore.rs  mod.rs  wallet.rs
client/src/kusama/: client.rs  listener.rs  mod.rs  tasks.rs  transaction.rs
client/src/parallel/: client.rs  listener.rs  mod.rs  tasks.rs  transactions.rs
client/src/postgres/: config.rs
db/: Cargo.toml
db/migrations/2021-05-19-101455_withdraw/: down.sql  up.sql
db/migrations/2021-05-19-101500_withdraw_tx/: down.sql  up.sql
db/src/: error.rs  executor.rs  lib.rs  model.rs  schema.rs
runtime/: Cargo.toml
runtime/src/: error.rs  lib.rs  para_api.rs  relay_api.rs
runtime/src/heiko/: api.rs  mod.rs  runtime.rs
runtime/src/kusama/: api.rs  mod.rs  runtime.rs
runtime/src/pallets/: balances.rs  currencies.rs  heiko_staking.rs  liquid_staking.rs  mod.rs  multisig.rs  nominee_election.rs  orml_tokens.rs  staking.rs  system.rs  test_oracle.rs  vanilla_oracle.rs  xcm_pallet.rs
runtime/src/parachain/: api.rs  mod.rs  runtime.rs
runtime/src/relaychain/: api.rs  mod.rs  runtime.rs
scripts/: Config.toml  db.sh  dev-login-db.sh  migrations
src/: command.rs  main.rs
src/client/: mod.rs  para_api.rs  para_runtime.rs  relay_api.rs  relay_runtime.rs
