[package]
authors     = ['Parallel Team']
description = 'A decentralized lending protocol which allow users to earn "double interests" from staking and lending'
edition     = '2018'
homepage    = 'https://parallel.fi'
name        = 'stake-client'
version     = '0.1.0'

[dependencies]
async-std = { version = "1.9.0", features = ["attributes"] }
blake2-rfc = '0.2.18'
clap = "2.33.0"
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
diesel = { version = '1.4.6', features = ['r2d2', 'postgres', 'chrono', 'uuid'] }
dirs = "2.0"
frame-system = "3.0.0"
hex = "0.4.0"
lazy_static = '1.4.0'
rand = '0.7.2'
rpassword = "4.0.1"
rustbreak = { version = "2.0.0-rc3", features=["bin_enc"] }
structopt   = '0.3.8'
thiserror   = "1.0.24"
toml        = "0.5.8"
sp-core = "3.0.0"
sp-runtime = "3.0.0"
sp-keyring = "3.0.0"
schnorrkel = { version = "0.9.1", features = ["preaudit_deprecated", "u64_backend"], default-features = false }
serde = { version = '1.0', features = ['derive'] }
serde_json = '1.0'
sodalite = '0.3.0'
substrate-subxt = {version = "0.15.0", git = "https://github.com/parallel-finance/substrate-subxt.git", branch = "polkadot-v0.9.2"}
parallel-primitives = { package = 'parallel-primitives', git = 'https://github.com/parallel-finance/parallel' }

db          = { package = 'db', path = '../db' }
runtime     = { package = 'runtime', path = '../runtime' }
orml-tokens = { git = 'https://github.com/open-web3-stack/open-runtime-module-library.git', default-features = false }

[features]
default = ['std']
std = [
	'sp-core/std',
	'sp-runtime/std',
	'orml-tokens/std'
]
