[package]
authors     = ['Parallel Team']
description = 'A decentralized lending protocol which allow users to earn "double interests" from staking and lending'
edition     = '2018'
homepage    = 'https://parallel.fi'
name        = 'stake-client'
version     = '0.1.0'

[dependencies]
async-std           = { version = "1.9.0", features = ["attributes"] }
blake2-rfc          = '0.2.18'
chrono              = { version = '0.4.19', features = ['serde'] }
clap                = "2.33.0"
codec               = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
diesel              = { version = '1.4.6', features = ['r2d2', 'postgres', 'chrono', 'uuid'] }
dirs                = "2.0"
env_logger          = "0.8.3"
frame-support       = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.3', default-features = false, version = '3.0.0' }
frame-system        = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.2" }
futures             = "0.3.15"
futures-channel     = "0.3.15"
hex                 = "0.4.0"
lazy_static         = '1.4.0'
log                 = "0.4.14"
orml-tokens         = { git = 'https://github.com/open-web3-stack/open-runtime-module-library.git', default-features = false, rev = '32666fd' }
parallel-primitives = { package = "parallel-primitives", git = "https://github.com/parallel-finance/parallel", rev = "2be3347" }
rand                = '0.7.2'
rpassword           = "4.0.1"
runtime             = { package = 'runtime', path = '../runtime' }
rustbreak           = { version = "2.0.0-rc3", features = ["bin_enc"] }
schnorrkel          = { version = "0.9.1", features = ["preaudit_deprecated", "u64_backend"], default-features = false }
serde               = { version = '1.0', features = ['derive'] }
serde_json          = '1.0'
sodalite            = '0.3.0'
sp-core             = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.2" }
sp-keyring          = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.2" }
sp-runtime          = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.2" }
sp-utils            = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.2", default-features = false }
structopt           = '0.3.8'
substrate-subxt     = { version = "0.15.0", git = "https://github.com/parallel-finance/substrate-subxt.git", branch = "polkadot-v0.9.2-t2" }
thiserror           = "1.0.24"
toml                = "0.5.8"

xcm = { git = 'https://github.com/paritytech/polkadot.git', branch = 'release-v0.9.5', default-features = false }

tokio = { version = '0.2.25', features = ['full'] }
[features]
default = ['std']
std     = ['sp-core/std', 'sp-runtime/std', 'orml-tokens/std', 'frame-support/std']
