[package]
authors     = ['Parallel Team']
description = 'A decentralized lending protocol which allow users to earn "double interests" from staking and lending'
edition     = '2018'
homepage    = 'https://parallel.fi'
name        = 'db'
version     = '0.1.0'

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
backoff   = '0.3.0'
chrono    = { version = '0.4.19', features = ['serde'] }
diesel    = { version = '1.4.6', features = ['r2d2', 'postgres', 'chrono', 'uuid'] }
r2d2      = '0.8.9'
serde     = { version = '1.0.126', features = ['derive'] }
thiserror = '1.0.24'
tokio     = '^1.3'
