[package]
authors     = ['Parallel Team']
description = 'A decentralized lending protocol which allow users to earn "double interests" from staking and lending'
edition     = '2018'
homepage    = 'https://parallel.fi'
name        = 'runtime'
version     = '0.1.0'

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.9.0"
async-trait = "0.1.50"
dirs = "2.0"
sodalite = "0.3.0"
substrate-subxt = {version = "0.15.0", git = "https://github.com/parallel-finance/substrate-subxt.git", branch = "polkadot-v0.9.2"}
substrate-subxt-proc-macro = "0.15.0"
jsonrpsee-types = "=0.2.0-alpha.6"
serde = { version = "1.0.124", features = ["derive"] }
serde_json = "1.0.64"
schnorrkel = { version = "0.9.1", features = ["preaudit_deprecated", "u64_backend"], default-features = false }
codec = { package = "parity-scale-codec", version = "2.1", default-features = false, features = ["derive", "full"] }

frame-support = "3.0.0"
sp-runtime = "3.0.0"
sp-core = "3.0.0"
sp-keyring = "3.0.0"
log = "0.4.0"
thiserror   = "1.0.24"

[features]
default = ["std"]
std = [
	"sp-runtime/std"
]
